--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,7 +211,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/1.jpg") top center;
   background-size: cover;
 }
 
@@ -233,7 +233,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 {
-  margin: 0 0 10px 0;
+  margin: 0 0 10px 680px;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
@@ -243,6 +243,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero p {
   color: #fff;
   margin-bottom: 50px;
+	margin-left: 700px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
